--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
           width: 100px;
       }
       li:hover{
-          background-color: green;
+          background-color: rgb(0, 115, 128);
           height: 40px;
       }
       *{
@@ -35,7 +35,7 @@
 </head>
 <body>
   <div class="d-flex justify-content-between">
-      <h3 style="color: gray; text-transform: uppercase;">Institut speciialse de technologie appliquee ait melloul</h3>
+      <h3 style="color: rgb(188, 69, 26); text-transform: uppercase;">Institut speciialse de technologie appliquee ait melloul</h3>
       <img src="./logo.png" alt="not found">
   </div>
   <div class="d-flex justify-content-between">
@@ -154,8 +154,8 @@
                  <div><span class="fw-bold">Heure Fin</span>&colon;&nbsp;&nbsp;<span class="text-secondary">8:30</span></div>
                 <div class="modal-footer my-3">
                   <div class="mt-3">
-                    <button class="btn btn-sm btn-secondary" data-bs-dismiss="modal"> <i class="fa fa-xmark"></i>  Annuler</button>
-                    <button class="btn btn-sm btn-primary" onclick="alert('vous etes sur de confirmer?')"> <i class="fa fa-check"></i> Confirmer</button>
+                    <button class="btn btn-sm btn-warning" data-bs-dismiss="modal"> <i class="fa fa-xmark"></i>  Annuler</button>
+                    <button class="btn btn-sm btn-warning" onclick="alert('vous etes sur de confirmer?')"> <i class="fa fa-check"></i> Confirmer</button>
                     </div>
                 </div>
               </form>
